2012-08-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/img/enchantress.png: New.

2012-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (request_handler): Add a fallback to the help case for when
	the help XSL transform fails.

2012-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (cve-details): Sort Vulnerable Products by Name.

2012-08-01  Matthew Mundell <matthew.mundell@greenbone.net>

	Enable the user to add or edit a task with any number of alerts.

	* src/gsad.c (init_validator): Remove alert_id_optional_2.  Add alerts
	and the hashtable version of alert_id_optional.
	(params_append_mhd): Add alert_id_optional to hashtable params.

	* src/gsad_omp.c (new_task, edit_task): Send number of alerts down to
	XSL.
	(create_task_omp, save_task_omp): Handle any number of alerts, instead
	of just two.

	* src/html/omp.xsl (html-edit-task-form): Show every alert, with link for
	adding more.
	(new-task-alert-select): New template.
	(new_task): Show two alerts, and a link for adding more.

2012-07-31  Matthew Mundell <matthew.mundell@greenbone.net>

	Add control of second alert to tasks.

	* src/gsad.c (init_validator): Add alert_id_optional_2 and alert_id_2.

	* src/gsad_omp.c (create_task_omp, save_task_omp): Pass second alert to
	manager.

	* src/html/omp.xsl (html-report-table): Display all alerts.
	(html-edit-task-form, new_task): Add second alert option.

2012-07-25  Matthew Mundell <matthew.mundell@greenbone.net>

	Add the new "Add results to Asset Management" task preference.

	* src/gsad.c (init_validator): Add in_assets.

	* src/gsad_omp.c (create_task_omp, save_task_omp)
	(save_container_task_omp): Add in_assets to task preferences in OMP
	command.

	* src/html/omp.xsl (html-report-table, html-edit-task-form, new_task): Add
	in_assets fields.

2012-07-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (get_many): If the filter is empty then add "row=-2", so that