@@ -1,3 +1,8 @@
+2012-08-06  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	* src/gsad.c (get_report): Send the GET_REPORTS OMP with the XML version
+	of the send function so that the search phrase is escaped.
+
 2012-08-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/html/img/enchantress.png: New.
